--- a/BattleShip Game/É Birus/BattleShip/index.html
+++ b/BattleShip Game/É Birus/BattleShip/index.html
@@ -24,7 +24,7 @@
         <div class="page2" id="page2">
             <h1>Bem Vindo</h1>
             <p>Se não souberes o que é um barco é isto:</p>
-            <img src="/images/200.gif" alt="">
+            <img src="/BattleShip Game/É Birus/images/200.gif" alt="">
             <a href="#page3 "><button type="button" id="btn-2">Of course I know</button></a>
         </div>
 
