--- a/ProtoScript-Home/index.html
+++ b/ProtoScript-Home/index.html
@@ -162,7 +162,7 @@
     <section class="u-clearfix u-image u-section-5" id="carousel_f5c5" data-image-width="1200" data-image-height="706">
       <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
         <h2 class="u-text u-text-body-alt-color u-text-1">BattleShip Game</h2>
-        <a href="" class="u-align-center u-border-1 u-border-active-white u-border-hover-white u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1">Play</a>
+        <a href="../BattleShip Game/É Birus/BattleShip/index.html" class="u-align-center u-border-1 u-border-active-white u-border-hover-white u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1">Play</a>
       </div>
     </section>
     
