--- a/BattleShip Game/É Birus/BattleShip/battleship.html
+++ b/BattleShip Game/É Birus/BattleShip/battleship.html
@@ -15,7 +15,7 @@
             <li><a href="#about">About</a></li>
           </ul> -->
             <div class="intro-text-2">
-                <img src="/images/source.gif" alt="">
+                <img src="/BattleShip Game/É Birus/images/source.gif" alt="">
               <h1>Battleship Game</h1>
               <p>Gustavo Telhada & Luís Oliveira</p>
               <a href="#page2 "><button type="button" id="intro-btn">Start Game</button></a>
@@ -105,7 +105,7 @@
                     </tbody>
                   </table>
                   
-                  <input type="text" class="form__input" id="name" placeholder="Guess" required="" />
+                  <input type="text" class="form__input" autoComplete="off" id="name" placeholder="Guess" required="" />
                   <a class="btn effect04" data-sm-link-text="CLICK" id="btn"><span>Fire</span></a>
                   <a class="btn effect04" data-sm-link-text="CLICK" id="reset-btn"><span>Reset</span></a>
 
