--- a/13 códigos/index.html
+++ b/13 códigos/index.html
@@ -7,8 +7,8 @@
 
 <header>
     <div class="intro-text" id="home-page">
-        <h1>Infinite Loop</h1>
-        <a href="#pizzas"><button type="button" id="intro-btn" value="clickMe" onclick="BrowserCrash()" style="font-size: larger;">Click Me!</button></a>
+        <h1>Loop Infinito</h1>
+        <a href="#pizzas"><button type="button" id="intro-btn" value="clickMe" onclick="BrowserCrash()" style="font-size: larger;">Clica aqui!</button></a>
         <img src="images/point.gif" alt="" style="float:left;">
         <img src="images/pointespelho.gif" alt="" style="float:right;">
     </div>
